# Agents-for-python

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODEOWNERS  DevInstructions.md  README.md  RELEASE_NOTES_0.5.0.md  changelog.md  dev_dependencies.txt  dev_setup.ps1  pytest.ini  release-notes-0.6.1.md  replace-version.ps1
dev/microsoft-agents-testing/: CLICK.md  README.md  my_script.py  payload.json  pyproject.toml  pytest.ini  setup.py
dev/microsoft-agents-testing/_manual_test/: main.py  quickstart_sample.py
dev/microsoft-agents-testing/docs/: API.md  ASSERTIONS.md  CHECK.md  CLI.md  DOC_INSTRUCTIONS.md  FRAMEWORK.md  MOTIVATION.md  ONE_PAGER.md  PROJECT.md  README.md  SAMPLES.md  UTILITIES.md
dev/microsoft-agents-testing/docs/agent_test/: README.md
dev/microsoft-agents-testing/docs/check/: README.md
dev/microsoft-agents-testing/docs/samples/: __init__.py  deep_dive_assertions.py  expect_and_select.py  interactive.py  multi_client.py  pytest_plugin_usage.py  quickstart.py  scenario_registry_demo.py  test_motivation_assertions.py  transcript_formatting.py  utilities.py
dev/microsoft-agents-testing/docs/underscore/: README.md  _INTERNAL.md
dev/microsoft-agents-testing/docs/utils/: README.md
dev/microsoft-agents-testing/microsoft_agents/check/: __init__.py  _assertion_context.py  check.py
dev/microsoft-agents-testing/microsoft_agents/testing/: __init__.py  activity_builder.py  activity_handler_scenario.py  agent_test.py  aiohttp_scenario.py  assert_responses.py  plugin.py  pytest_plugin.py  scenario_registry.py  sdk_config.py  source_scenario.py  transcript_logger.py  utils.py
dev/microsoft-agents-testing/old_tests/agent_test/: test_aiohttp_agent_scenario.py
dev/microsoft-agents-testing/old_tests/check/: test_check.py  test_quantifier.py
dev/microsoft-agents-testing/old_tests/underscore/: test_instrospection.py  test_models.py  test_underscore.py
dev/microsoft-agents-testing/old_tests/utils/: test_model_utils.py
dev/microsoft-agents-testing/samples/: interactive.py
dev/microsoft-agents-testing/tests/: manual.py  test_aiohttp_scenario.py  test_aiohttp_scenario_integration.py  test_failure_formatting.py  test_pytest_plugin.py  test_scenario_registry.py  test_scenario_registry_plugin.py  test_source_scenario.py  test_transcript_formatter.py
dev/microsoft-agents-testing/tests/agent_test/: test_agent_scenario.py  test_agent_test.py  test_aiohttp_agent_scenario.py
dev/microsoft-agents-testing/tests/agent_tests/: test_agent_tests.py
dev/microsoft-agents-testing/tests/assertions/: _common.py  test_activity_assertion.py  test_assert_activity.py  test_assert_model.py  test_assertion_context.py  test_assertions.py  test_check_activity.py  test_check_field.py  test_checker.py  test_dynamic_object.py  test_fixtures.py  test_model_assertion.py  test_model_query.py  test_selector.py
dev/microsoft-agents-testing/tests/check/: test_check.py  test_quantifier.py
dev/microsoft-agents-testing/tests/cli/: __init__.py  test_cli_config.py  test_cli_integration.py  test_config.py  test_decorators.py  test_main.py  test_output.py
dev/microsoft-agents-testing/tests/client/: test_agent_client.py  test_callback_server.py  test_conversation_client.py  test_integration.py  test_sender.py
dev/microsoft-agents-testing/tests/core/: test_agent_client.py  test_aiohttp_client_factory.py  test_client_config.py  test_config.py  test_external_scenario.py  test_integration.py  test_scenario_config.py  test_type_defs.py
dev/microsoft-agents-testing/tests/integration/: test_application_runner.py  test_integration_from_service_url.py
dev/microsoft-agents-testing/tests/manual_test/: main.py
dev/microsoft-agents-testing/tests/samples/: __init__.py  quickstart_sample.py
dev/microsoft-agents-testing/tests/scenario/: test_aiohttp_client_factory.py  test_aiohttp_scenario.py  test_aiohttp_scenario_integration.py  test_client_config.py  test_external_scenario.py  test_external_scenario_integration.py  test_scenario_base.py  (+1 more)
dev/microsoft-agents-testing/wip/: cli_test.py
dev/testing/python-sdk-tests/: .gitignore  .infra.json  README.md  azure.yaml  env.TEMPLATE  main.py  pyproject.toml  pytest.ini  tests.Dockerfile
libraries/Authentication/microsoft-agents-authorization-msal/: pyproject.toml  setup.py
libraries/Botbuilder/microsoft-agents-botbuilder/: pyproject.toml  setup.py
libraries/Client/microsoft-agents-copilotstudio-client/: pyproject.toml  setup.py
libraries/Core/microsoft-agents-authentication/: pyproject.toml
libraries/Core/microsoft-agents-core/: pyproject.toml
libraries/Storage/microsoft-agents-cosmos/: pyproject.toml
libraries/microsoft-agents-copilotstudio-client/: pyproject.toml  readme.md  setup.py
libraries/microsoft-agents-hosting-core/: pyproject.toml  readme.md  setup.py
libraries/microsoft-agents-hosting-core/tests/: flow_storage_client_test.py  test_activity_handler.py  test_agent_state.py  test_auth_configuration.py  test_auth_flow.py  test_authorization.py  test_error_handling.py  test_flow_state.py  test_flow_storage_client.py  test_memory_storage.py  test_oauth_flow.py  test_state.py  test_turn_context.py
libraries/microsoft-agents-hosting-teams/: pyproject.toml  readme.md  setup.py
libraries/microsoft-agents-storage-blob/: pyproject.toml  readme.md  setup.py
libraries/microsoft-agents-storage-blob/tests/: test_blob_storage.py
libraries/microsoft-agents-storage-cosmos/: pyproject.toml  readme.md  setup.py
libraries/microsoft-agents-storage-cosmos/tests/: test_cosmos_db_storage.py  test_key_ops.py
test_samples/hosting_msteams/conversation-agent/: README.md  pyproject.toml
test_samples/hosting_msteams/graph-clients/: README.md  env.TEMPLATE  pyproject.toml
test_samples/hosting_msteams/message-extensions/: README.md  env.TEMPLATE  pyproject.toml
test_samples/hosting_msteams/task-modules/: README.md  env.TEMPLATE  pyproject.toml
versioning/: TARGET-VERSION  pyproject.toml
versioning-helper/: pyproject.toml
versioning-helper/helper/: __init__.py
versioning/helper/: __init__.py  versioning.py
(+2645 files in other folders)
