[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "microsoft-agents-testing"
dynamic = ["version", "dependencies"]
description = "Core library for Microsoft Agents"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [{name = "Microsoft Corporation"}]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/microsoft/Agents"

[project.scripts]
aclip = "microsoft_agents.testing.cli:cli"