[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "microsoft-agents-storage-cosmos"
version = "0.0.0a1"
description = "A Cosmos DB storage library for Microsoft Agents"
authors = [{name = "Microsoft Corporation"}]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "microsoft-agents-hosting-core",
    "azure-core",
    "azure-cosmos",
]

[project.urls]
"Homepage" = "https://github.com/microsoft/Agents"
