[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "microsoft-agents-storage-cosmos"
dynamic = ["version", "dependencies"]
description = "A Cosmos DB storage library for Microsoft Agents. DEPRECATED: This library has been renamed to msagents-storage-cosmos. This will be the last version published with the current name."
authors = [{name = "Microsoft Corporation"}]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/microsoft/Agents"
