[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "microsoft-agents-authentication"
dynamic = ["version"]
description = "An authentication library for Microsoft Agents"
authors = [{name = "Microsoft Corporation"}]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyjwt>=2.10.1"
]

[project.urls]
"Homepage" = "https://github.com/microsoft/microsoft-agents-protocol"
